fix: contrast accessibility
for PageSpeed Insights
https://dequeuniversity.com/rules/axe/4.9/link-in-text-block

色では効果なし。太字だとよさげなのでいったんこれで。

--- a/source/css/_bass/bass.styl
+++ b/source/css/_bass/bass.styl
@@ -1,5 +1,6 @@
 a
   color: color-link
+  font-weight: bold
   text-decoration: none
 
   &:hover
